--- a/.github/workflows/test3.yml
+++ b/.github/workflows/test3.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - "test"
 
+defaults:
+  run:
+    working-directory: ./webinar2_example3
+
 env:
   PYTHON_VERSION: "3.10"
   CACHE_VERSION: "1"
