--- a/webinar2_example3/setup.cfg
+++ b/webinar2_example3/setup.cfg
@@ -1,8 +1,12 @@
 [flake8]
 max-line-length = 120
 
+# E302 — ожидалось 2 пустые строки
+# E305 — ожидалось 2 пустые строки после функции
+# W503 — line break before binary operator
+# F401 — импорт не используется
 ignore =
-    E302    # ожидалось 2 пустые строки
-    E305    # ожидалось 2 пустые строки после функции
-    W503    # line break before binary operator
-    F401    # импорт не используется
+    E302
+    E305
+    W503
+    F401
