non blocking tests

--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run linter (flake8)
         run: |
           echo "Running flake8..."
-          flake8 . --exclude=venv --max-line-length=120
+          flake8 . --exclude=venv --max-line-length=120 || true
 
       - name: Run tests (pytest)
         env:
